eks/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 098413838169.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:1f1e6a8cb66bffedc41f8f925c6efa0573054fc3
        ports:
        - containerPort: 8080
